# rs-dom-template

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  justfile  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.js
public/: robots.txt  sitemap.xml
src/: lib.rs
src/app/: mod.rs  route.rs
src/app/pages/: about.rs  contact.rs  home.rs  mod.rs
src/component/: footer.rs  header.rs  mod.rs  nav.rs  nav_link.rs  theme.rs
src/logo/: brand.rs  brand_with_text.rs  letter.in  mod.rs
