[package]
name = "denominator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
opt-level = "z"  

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
dominator = "0.5.32"
wasm-bindgen = "0.2.84"
futures-signals = "0.3.32"
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.61"
futures = "0.3.15"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
serde_json = "1.0.95"
serde_derive = "1.0.126"

wasm-logger = { version = "0.2.0", optional = true }
log = "0.4.17"
gloo-timers = { version = "0.2.1", features = ["futures"] }
gloo-utils = "0.1.6"
once_cell = "1.17.1"
cfg-if = "1.0.0"

[dependencies.serde]
version = "1.0.159"
features = ["rc"]

[dependencies.web-sys]
version = "0.3.61"
features = [
    "HtmlInputElement",
    "Storage",
    "console",
    "Url",
    "AbortController",
    "AbortSignal",
    "Headers",
    "Response",
    "RequestInit",
    "MediaQueryList"
]
[features]
default = []
dev = ["wasm-logger", "console_error_panic_hook"]
