[package]
name = "denominator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
opt-level = "z"  

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
dominator = "0.5.35"
wasm-bindgen = "0.2.92"
futures-signals = "0.3.33"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
futures = "0.3.30"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
serde_json = "1.0.120"
serde_derive = "1.0.203"

wasm-logger = { version = "0.2.0", optional = true }
log = "0.4.22"
gloo-timers = { version = "0.2.6", features = ["futures"] }
gloo-utils = "0.1.7"
once_cell = "1.19.0"
cfg-if = "1.0.0"

[dependencies.serde]
version = "1.0.203"
features = ["rc"]

[dependencies.web-sys]
version = "0.3.69"
features = [
    "HtmlInputElement",
    "Storage",
    "console",
    "Url",
    "AbortController",
    "AbortSignal",
    "Headers",
    "Response",
    "RequestInit",
    "MediaQueryList"
]
[features]
default = []
dev = ["wasm-logger", "console_error_panic_hook"]
